// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage should match the snapshot when greater than or equal to desktop 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Erreur
    </span>
  </div>
  <div
    class="large-container fr-m-auto fr-px-2w fr-mt-8w"
    id="page-container"
  >
    <div>
      ReactRouterDom Outlet Component
    </div>
    <p>
      <span
        data-mockid="Link"
      >
        Revenir à l’accueil
      </span>
    </p>
  </div>
</div>
`;

exports[`ErrorPage should match the snapshot when lower than desktop 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Erreur
    </span>
  </div>
  <div
    class="large-container fr-m-auto fr-px-2w fr-mt-5w"
    id="page-container"
  >
    <div>
      ReactRouterDom Outlet Component
    </div>
    <p>
      <span
        data-mockid="Link"
      >
        Revenir à l’accueil
      </span>
    </p>
  </div>
</div>
`;
